fixed ngForm error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form ng-Form #todoForm= "ngForm" (ngSubmit)="todoSubmit(todoForm.value)">
+  <form #todoForm= "ngForm" (ngSubmit)="todoSubmit(todoForm.value)">
     <div class="form-group">
       <h1 class="text-center text-primary">Todo App</h1>
       <div class="input-group-prepend">
